--- a/order/pom.xml
+++ b/order/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.miniProject</groupId>
-	<artifactId>restaurant</artifactId>
+	<artifactId>order</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>restaurant</name>
-	<description>Demo project for Spring Boot</description>
+	<name>order</name>
+	<description>Order Service</description>
 
 	<properties>
 		<java.version>1.8</java.version>
